@@ -1,3 +1,12 @@
+2021-06-28  W.D. Xiong  <w_xiong@apple.com>
+
+        Add wdx to contributors.json
+        https://bugs.webkit.org/show_bug.cgi?id=227466
+
+        Unreviewed
+
+        * Scripts/webkitpy/common/config/contributors.json: Add wdx as committer
+
 2021-06-28  Jonathan Bedard  <jbedard@apple.com>
 
         [webkitcorepy] Add test suite with temp directory
